# piis2

./: laba6.doc  pyproject.toml  requirements-dev.txt
api_examples/: enroll_all.py
educa/: db.sqlite3
educa/courses/: admin.py  fields.py  forms.py  models.py  tests.py  urls.py  views.py
educa/courses/api/: serializers.py  urls.py  views.py
educa/courses/migrations/: 0001_initial.py  0002_alter_image_file.py  0003_course_students.py
educa/courses/static/css/: base.css
educa/courses/templates/: base.html
educa/courses/templates/courses/content/: file.html
educa/courses/templates/courses/course/: detail.html  list.html
educa/courses/templates/courses/manage/content/: form.html  list.html
educa/courses/templates/courses/manage/course/: delete_confirm.html  form.html  list.html
educa/courses/templates/courses/manage/module/: formset.html
educa/courses/templates/courses/subject/: list.html
educa/courses/templates/registration/: logged_out.html  login.html
educa/courses/templates/students/course/: detail.html  list.html
educa/courses/templates/students/student/: registration.html
educa/educa/: asgi.py  settings.py  urls.py
educa/students/: forms.py  urls.py  views.py
laba1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
